syntax = "proto2";
package example;

enum FOO { X = 17; };

message Test {
  required string label = 1;
  optional int32 type = 2 [default=77];
  repeated int64 reps = 3;
}

message TestStringArray{
  required string s1 = 1;
  required string s2 = 2;
}

message TestUint{
  required uint32 u = 1;
}