syntax = "proto2";
package protobufmsg;

message Msg {
  required uint64 code = 1;
  optional bytes payload = 2 ;
}

message Cap {
  required string name = 1;
  required uint64 version = 2; 
}

message ProtoHandshake {
  required uint64 version = 1; 
  required string name = 2;
  repeated Cap caps = 3;
  optional uint64 listenPort = 4;
  optional bytes id = 5;
  optional bytes rest = 6;
}